Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-7399

[C++][Gandiva] Gandiva does not pick runtime cpu features

    XMLWordPrintableJSON

Details

    Description

      yibo reported that the IR code generated by gandiva is using 128-bit registers even though the test machine has cpu with avx2 feature. I was able to reproduce the same on a  gce host.

      Attachments

        Issue Links

          Activity

            People

              pravindra Pindikura Ravindra
              pravindra Pindikura Ravindra
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m